# URL-transformer

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: models.py  services.py  shemas.py  urls.py
public/: index.html
