[tool.poetry]
name = "http-service"
version = "0.1.0"
description = ""
authors = ["Vladimir Mishin <bloodimirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
flake8 = "^7.1.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
